# master/models/account.go
@@ -11,13 +11,13 @@ import (
 type Account struct {
 	gorm.Model
 	BaseCasbinEntity
-	Username   string    `gorm:"type:varchar(100);not null;uniqueIndex:idx_username_server"`
-	Password   string    `gorm:"not null"` // MD5 hash TODO:
-	Email      string    `gorm:"not null"`
-	Server     string    `gorm:"type:varchar(100);not null;uniqueIndex:idx_username_server"`
-	ExpireAt   time.Time `gorm:"type:datetime(3);default:CURRENT_TIMESTAMP(3)"`
-	UserID     uint
-	RouteTasks []RouteTask `gorm:"foreignKey:AccountID"`
+	Username string    `gorm:"type:varchar(100);not null;uniqueIndex:idx_username_server"`
+	Password string    `gorm:"not null"` // MD5 hash TODO:
+	Email    string    `gorm:"not null"`
+	Server   string    `gorm:"type:varchar(100);not null;uniqueIndex:idx_username_server"`
+	ExpireAt time.Time `gorm:"type:datetime(3);default:CURRENT_TIMESTAMP(3)"`
+	Tasks    []Task    `gorm:"foreignKey:AccountID"`
+	UserID   uint
 }
 
 func (account Account) GetEntityPrefix() string {
@@ -28,6 +28,7 @@ type AccountInfo struct {
 	Username string `json:"username"`
 	Password string `json:"password"` // MD5 hash
 	Server   string `json:"server"`
+	Email    string `json:"email"`
 }
 
 // TODO: add init func to set expire time
@@ -43,13 +44,17 @@ func NewAccount(username, password, email, server string) *Account {
 
 // ToDTO converts an Account to an AccountDTO.
 func (account *Account) ToDTO() *AccountDTO {
+	tasks := make([]*TaskDTO, len(account.Tasks))
+	for i, task := range account.Tasks {
+		tasks[i] = task.ToDTO()
+	}
 	return &AccountDTO{
-		ID:         account.ID,
-		Username:   account.Username,
-		Email:      account.Email,
-		Server:     account.Server,
-		RouteTasks: account.RouteTasks,
-		ExpireAt:   account.ExpireAt,
+		ID:       account.ID,
+		Username: account.Username,
+		Email:    account.Email,
+		Server:   account.Server,
+		ExpireAt: account.ExpireAt,
+		Tasks:    tasks,
 	}
 }
 func (account *Account) ToInfo() *AccountInfo {
@@ -63,12 +68,12 @@ func (account *Account) ToInfo() *AccountInfo {
 // AccountDTO is a data transfer object for Account.
 // It is used when interacting with external systems.
 type AccountDTO struct {
-	ID         uint        `json:"id"`
-	Username   string      `json:"username"`
-	Email      string      `json:"email"`
-	Server     string      `json:"server"`
-	RouteTasks []RouteTask `json:"route_tasks"`
-	ExpireAt   time.Time
+	ID       uint   `json:"id"`
+	Username string `json:"username"`
+	Email    string `json:"email"`
+	Server   string `json:"server"`
+	ExpireAt time.Time
+	Tasks    []*TaskDTO `json:"tasks"`
 }
 
 // ToModel converts an AccountDTO to an Account.
@@ -77,9 +82,8 @@ func (accountDTO *AccountDTO) ToModel() *Account {
 		Model: gorm.Model{
 			ID: accountDTO.ID,
 		},
-		Username:   accountDTO.Username,
-		Email:      accountDTO.Email,
-		Server:     accountDTO.Server,
-		RouteTasks: accountDTO.RouteTasks,
+		Username: accountDTO.Username,
+		Email:    accountDTO.Email,
+		Server:   accountDTO.Server,
 	}
 }
